--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CosmeticShop</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
 
     <link rel="stylesheet" href="~/css/LayoutHeader.css" />
     <link rel="stylesheet" href="~/css/LayoutBody.css" />
@@ -13,77 +13,80 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  mb-3">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#">
+                <img src="~/image/logo.png" alt="logo-header" id="logo-header">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-first navbar-nav justify-content-center">
+                    <a class="nav-item nav-link active" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
+                    <a class="nav-item nav-link" asp-area="" asp-controller="Traiding" asp-action="Index">Магазин</a>
+                    <a class="nav-item nav-link" asp-area="" asp-controller="" asp-action="Index">Доставка и
+                        Оплата</a>
+                    <a class="nav-item nav-link" asp-area="" asp-controller="" asp-action="Index">Контакты</a>
+                    <a class="nav-item nav-link" asp-area="" asp-controller="" asp-action="Index">О нас</a>
 
-            <div class="container">
-                <div class="container-logo">
-                    <img src="~/image/logo.png" alt="logo" class="logo">
                 </div>
-                @* <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CosmeticShop</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button> *@
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"
-                                asp-action="Index">Главная</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Traiding"
-                                asp-action="Index">Магазин</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Доставка и
-                                Оплата</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">Контакты</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="Index">О нас</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders"
-                                asp-action="Index">Корзина</a>
-                        </li>
-                        <li class="nav-item">
-                            <details>
-                                <summary>Картинка</summary>
-                                @if (!User.Identity.IsAuthenticated)
-                                {
-                                    <div>
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Account"
-                                        asp-action="Login">Вход</a>
-                                    </div>
-                                    <div>
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Account"
-                                        asp-action="Register">Регистрация</a>
-                                    </div>
-                                }
-                                else
-                                {
-                                    <div>
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="PersonalArea"
-                                        asp-action="Index">Личный кабинет</a>
-                                    </div>
-                                }
-                            </details>
-                        </li>
-                        @* <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li> *@
-                    </ul>
+                <div class="navbar-second navbar-nav  justify-content-end">
+                    <!-- hiden -->
+                    <div class="dropdown">
+                        <button class="btn btn-circle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            <img src="~/image/search.png" alt="user">
+                        </button>
+                        <div class="dropdown-menu dropdown-search" aria-labelledby="dropdownMenuButton">
+                            <form class="navbar form-inline">
+                                <input class="form-control mr-sm-2" type="search" placeholder="Введите товар"
+                                    aria-label="Search">
+                                <button class="btn btn-circle my-2 my-sm-0" type="submit">
+                                    <img src="/image/search.png" alt="search" class="search">
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                    <!-- hiden -->
+                    <button class="btn btn-circle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                            <img src="~/image/shopping-bag.png" alt="shopping-bag">
+                    </button>
 
+
+                    <div class="dropdown">
+                        <button class="btn btn-circle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            <img src="~/image/user.png" alt="user-header">
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            @if (!User.Identity.IsAuthenticated)
+                            {
+                                <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="Login">Вход в
+                                    аккаунт</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-area="" asp-controller="Account"
+                                asp-action="Register">Зарегистрироваться</a>
+
+                            }
+                            else
+                            {
+                                <a class="dropdown-item" asp-area="" asp-controller="PersonalArea" asp-action="Index">Личный
+                                    кабинет</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-area="" asp-controller="PersonalArea" asp-action="">Выход</a>
+                            }
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
+
+
+
+
+
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
