--- a/CosmeticShop/CosmeticShop/wwwroot/css/LayoutBody.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/LayoutBody.css
@@ -1,8 +1,15 @@
-body{
-    background-color: #FFF8F4;
-    font-family: Crimson Text;
+body {
+    background-color: #FFF8F4!important;
+    font-family: Crimson Text!important;
 }
-body .container{
-    width: 1400px;
-    height: auto;
+.btn-circle {
+    width: 50px;
+    height: 50px;
+    border-radius: 35px;
+    text-align: center;
+    padding-left: 0;
+    padding-right: 0;
+}
+.btn-circle:focus {
+    box-shadow: 0 1px 1px #FFF8F4 inset, 0 0 8px #FFF8F4!important;
 }
