--- a/CosmeticShop/CosmeticShop/wwwroot/css/LayoutHeader.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/LayoutHeader.css
@@ -1,95 +1,61 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿body {
+  background-color: #FFF8F4!important;
+  font-family: Crimson Text!important;
+}
+body header {
+  color: #271403;
+  font-weight: 400;
+  font-size: 16px;
+  font-family: Crimson Text;
+  line-height: 24.84px;
 
-html body header {
-  margin-bottom: 40px;
-  margin-top: 40px;
-  height: 49px;
+  margin: 10px 150px 60px 150px;
 }
-html body header .navbar{
-  padding: 0 260px  0 260px;
-}
-body header .navbar .container .container-logo{
-  padding-right: 200px;
-}
-body header .navbar .container .navbar-collapse{
-  padding-right: 100px;
-}
-body header .navbar .container .container-logo .logo{
+body header .navbar .navbar-brand .logo-header{
   width: 127px;
-  height: 49px;
+  height: 50px;
 }
-
-
-
-
-
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+body header .collapse .navbar-first {
+  width: auto;
+  height: auto;
+  margin-right: 150px;
+  margin-left: 150px;
 }
-
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+body header .collapse .navbar-first .nav-item{
+  width: auto;
+  height: auto;
+  margin-right: 30px;
 }
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+body header .collapse .navbar-second .dropdown .dropdown-menu{
+  width: 200px;
+  height: auto;
+  background-color: rgba(214, 204, 195, 0.2);
+  border: 1px solid rgba(39, 20, 3, 0.5);
 }
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: aqua;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+body header .collapse .navbar-second .dropdown .dropdown-menu .dropdown-item:hover{
+  background-color: rgba(207, 125, 134, 0.12);
+  /* border: 1px solid rgba(39, 20, 3, 0.5); */
 }
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
+body header .collapse .navbar-second .dropdown .dropdown-search {
+  width: 250px;
+  height: auto;
+  padding: 0 2px 0 2px!important;
+  background-color: rgba(214, 204, 195, 0.2);
+  border: 1px solid rgba(39, 20, 3, 0.5);
 }
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+body header .collapse .navbar-second .dropdown .dropdown-search .form-inline .form-control{
+  width: 160px;
+  height: 45px;
 }
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
+body header .collapse .navbar-second .dropdown .dropdown-search .btn{
+  width: auto;
+  height: auto;
+  padding: 8px;
 }
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+body header .collapse .navbar-second .dropdown .dropdown-search .btn .search{
+  width: 25px;
+  height: 25px;
 }
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+.dropdown-divider{
+  color: rgba(61, 29, 0, 0.5);
 }
